--- a/spark_env/mercadoPago.ipynb
+++ b/spark_env/mercadoPago.ipynb
@@ -635,14 +635,14 @@
       "Collecting async-timeout>=4.0.3 (from asyncpg)\n",
       "  Downloading async_timeout-4.0.3-py3-none-any.whl.metadata (4.2 kB)\n",
       "Downloading asyncpg-0.29.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
       "\u001b[?25hDownloading async_timeout-4.0.3-py3-none-any.whl (5.7 kB)\n",
       "Installing collected packages: async-timeout, asyncpg\n",
       "Successfully installed async-timeout-4.0.3 asyncpg-0.29.0\n",
       "Collecting psycopg2-binary\n",
       "  Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.4 kB)\n",
       "Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
       "Successfully installed psycopg2-binary-2.9.9\n"
      ]
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "13b78119-edb6-4d90-baa5-31fc4b51e04d",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "919b5ea3-45da-4df1-981f-925e58049054",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "3ac5352c-76ab-4b00-aec1-82eb46735254",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
        "4    24728  2020-11-01                1          link_cobro"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "324c669b-eeb9-4f7a-bc0b-e2446e180e86",
    "metadata": {},
    "outputs": [],
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "id": "ae954494-e7eb-4651-9c98-b119afc4c8af",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "58bdf0f0-92ba-4bb8-be8a-2636483fc1b6",
    "metadata": {},
    "outputs": [],
@@ -858,13 +858,13 @@
     "async def insert_data():\n",
     "    try:\n",
     "        await database.connect()\n",
-    "        for record in printsDF_insert[:10]:\n",
+    "        for record in printsDF_insert[:20]:\n",
     "            await database.execute(\"INSERT INTO prints (user_id, day_prints, position_prints, value_prop_prints) VALUES (:user_id, :day_prints, :position_prints, :value_prop_prints)\", values=record)\n",
     "        \n",
-    "        for record in tapsDF_insert[:10]:\n",
+    "        for record in tapsDF_insert[:20]:\n",
     "            await database.execute(\"INSERT INTO taps (user_id, day_taps, position_taps, value_prop_taps) VALUES (:user_id, :day_taps, :position_taps, :value_prop_taps)\", values=record)\n",
     "        \n",
-    "        for record in paysDF_insert[:10]:\n",
+    "        for record in paysDF_insert[:20]:\n",
     "            await database.execute(\"INSERT INTO pays (pay_date, total, user_id, value_prop) VALUES (:pay_date, :total, :user_id, :value_prop)\", values=record)\n",
     "    except Exception as e:\n",
     "        print(f\"Error al insertar datos: {e}\")\n",
@@ -876,100 +876,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "eb703b69-38f7-49d4-8042-cd74c90f3a48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Contenido de la tabla 'prints':\n",
-      "user_id: 98702\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 0\n",
-      "value_prop_prints: cellphone_recharge\n",
-      "\n",
-      "user_id: 98702\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 0\n",
-      "value_prop_prints: cellphone_recharge\n",
-      "\n",
-      "user_id: 98702\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 1\n",
-      "value_prop_prints: prepaid\n",
-      "\n",
-      "user_id: 63252\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 0\n",
-      "value_prop_prints: prepaid\n",
-      "\n",
-      "user_id: 24728\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 0\n",
-      "value_prop_prints: cellphone_recharge\n",
-      "\n",
-      "user_id: 24728\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 1\n",
-      "value_prop_prints: link_cobro\n",
-      "\n",
-      "user_id: 24728\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 2\n",
-      "value_prop_prints: credits_consumer\n",
-      "\n",
-      "user_id: 24728\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 3\n",
-      "value_prop_prints: point\n",
-      "\n",
-      "user_id: 25517\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 0\n",
-      "value_prop_prints: point\n",
-      "\n",
-      "user_id: 25517\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 1\n",
-      "value_prop_prints: credits_consumer\n",
-      "\n",
-      "user_id: 25517\n",
-      "day_prints: 2020-11-01\n",
-      "position_prints: 2\n",
-      "value_prop_prints: transport\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "async def select_data(table_name):\n",
     "    try:\n",
-    "        # Conectar a la base de datos\n",
     "        await database.connect()\n",
     "        \n",
-    "        # Ejecutar la consulta SQL para seleccionar todos los datos de la tabla especificada\n",
     "        query = f\"SELECT * FROM {table_name};\"\n",
     "        result = await database.fetch_all(query)\n",
     "        \n",
-    "        # Imprimir los resultados obtenidos\n",
     "        print(f\"Contenido de la tabla '{table_name}':\")\n",
     "        for row in result:\n",
-    "            # Convertir la fila a un diccionario para acceder a los valores por nombre de columna\n",
     "            row_dict = dict(row)\n",
-    "            # Imprimir cada valor de la fila\n",
     "            for column, value in row_dict.items():\n",
     "                print(f\"{column}: {value}\")\n",
-    "            print()  # Imprimir una línea en blanco entre las filas\n",
+    "            print('----------------')\n",
     "    except Exception as e:\n",
-    "        # Si se produce un error, imprimirlo\n",
     "        print(f\"Error al seleccionar datos de la tabla '{table_name}': {e}\")\n",
     "    finally:\n",
-    "        # Asegurarse de cerrar la conexión\n",
     "        await database.disconnect()\n",
     "\n",
-    "# Llamar a la función para seleccionar datos de la tabla 'prints'\n",
     "await select_data('prints')\n"
    ]
   },
