Fix create Tables into sql

--- a/spark_env/mercadoPago.ipynb
+++ b/spark_env/mercadoPago.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "0bfcf5d9-1c62-457f-b846-3ba5cdfc9f8e",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "e3ac9e89-36b5-48ac-ac89-f641dd01f5e7",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "4dceecdd-444c-4749-a29b-ccc36bdb4e46",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "dec446d0-5cf0-4ac2-a346-82d24bed8ce6",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "df9e151e-cfe0-4d36-a458-b8d262b5c395",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "7109e338-0461-423e-83d3-4bb37355ca46",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "148e1459-9fae-4ba4-bf71-4e84ca3ae5a4",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "a646f663-6ae0-4989-8a32-b15a31f1feb9",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "08b1eaa3-7c94-4412-9ce7-4570bea1d181",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "374cc1c7-8958-4e19-995e-83ecb804572c",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "43b7ade9-f52b-42b5-ad45-85f5c701abca",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "47bd605e-8d59-40a5-bdde-ac4add9669d3",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "89f9dc97-c8fe-4388-a638-c0322d5486ae",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "3d7b31a3-5e55-49a6-9d3f-4293bd584cee",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "id": "1c19ab1f-204e-4607-997b-97e4b196f514",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "93ba5aa0-aa28-412f-82c2-be62422eb62f",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "ce59bf83-a346-47d0-99db-72cdc88b787e",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "id": "b3f9d3ae-23a8-4b4d-b26d-2f65c10c49d5",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "978d2745-956d-415e-baa0-3cd6796ba7dc",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "id": "4eec9cd8-a181-4108-aae9-3cd4567d7b5a",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "id": "7dd07f63-794c-4f9e-9860-cc95a7d2d21d",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "id": "22808893-429b-4e18-9f80-4c3564a9ef82",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "id": "95e14da6-00a1-460d-8480-fa6ba2b74ea7",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "id": "92b88af9-75cb-4ed0-8f7e-fbaab0a9610f",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "id": "11d31698-a187-437d-97ed-f849dcb7545a",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "id": "0b1fdb19-3e03-4ac8-8632-6c661cb0209e",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "id": "aa0da047-8f86-44cb-9e4f-d525972e705d",
    "metadata": {},
    "outputs": [],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "id": "b784d7d4-8078-49e9-82db-66c8de7c16ae",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "id": "edd48ad8-c3b0-44ca-ace1-2d8c7bd809c6",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "id": "864cfc6b-d243-455c-817a-09daab56b9b4",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "id": "991e8906-83b1-4398-b8af-6ec1b8a51d56",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "id": "505ce847-b0fa-466c-97b9-e8967f046bec",
    "metadata": {},
    "outputs": [
@@ -623,41 +623,24 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: sqlalchemy in /opt/conda/lib/python3.11/site-packages (2.0.28)\n",
-      "Collecting databases\n",
-      "  Downloading databases-0.9.0-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: databases in /opt/conda/lib/python3.11/site-packages (0.9.0)\n",
       "Requirement already satisfied: typing-extensions>=4.6.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy) (4.10.0)\n",
       "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy) (3.0.3)\n",
-      "Downloading databases-0.9.0-py3-none-any.whl (25 kB)\n",
-      "Installing collected packages: databases\n",
-      "Successfully installed databases-0.9.0\n",
-      "Collecting asyncpg\n",
-      "  Downloading asyncpg-0.29.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.4 kB)\n",
-      "Collecting async-timeout>=4.0.3 (from asyncpg)\n",
-      "  Downloading async_timeout-4.0.3-py3-none-any.whl.metadata (4.2 kB)\n",
-      "Downloading asyncpg-0.29.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
-      "\u001b[?25hDownloading async_timeout-4.0.3-py3-none-any.whl (5.7 kB)\n",
-      "Installing collected packages: async-timeout, asyncpg\n",
-      "Successfully installed async-timeout-4.0.3 asyncpg-0.29.0\n",
-      "Collecting psycopg2-binary\n",
-      "  Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.4 kB)\n",
-      "Downloading psycopg2_binary-2.9.9-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
-      "Successfully installed psycopg2-binary-2.9.9\n"
+      "Requirement already satisfied: asyncpg in /opt/conda/lib/python3.11/site-packages (0.29.0)\n",
+      "Requirement already satisfied: async-timeout>=4.0.3 in /opt/conda/lib/python3.11/site-packages (from asyncpg) (4.0.3)\n",
+      "Requirement already satisfied: psycopg2-binary in /opt/conda/lib/python3.11/site-packages (2.9.9)\n"
      ]
     }
    ],
    "source": [
     "!pip install sqlalchemy databases\n",
     "!pip install asyncpg\n",
-    "!pip install psycopg2-binary\n",
-    "\n"
+    "!pip install psycopg2-binary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "id": "13b78119-edb6-4d90-baa5-31fc4b51e04d",
    "metadata": {},
    "outputs": [],
@@ -679,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "id": "919b5ea3-45da-4df1-981f-925e58049054",
    "metadata": {},
    "outputs": [
@@ -707,7 +690,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
+   "id": "d57b9ab9-e71d-4ddf-8e2b-7a2f983c671c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tablas creadas exitosamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import Table, Column, Integer, String, Date, create_engine, MetaData\n",
+    "\n",
+    "pays_table = Table(\n",
+    "    'pays', metadata,\n",
+    "    Column('pay_date', Date),\n",
+    "    Column('total', Integer),\n",
+    "    Column('user_id', Integer),\n",
+    "    Column('value_prop', String(255))\n",
+    ")\n",
+    "\n",
+    "taps_table = Table(\n",
+    "    'taps', metadata,\n",
+    "    Column('user_id', Integer),\n",
+    "    Column('day_taps', Date),\n",
+    "    Column('position_taps', Integer),\n",
+    "    Column('value_prop_taps', String(255))\n",
+    ")\n",
+    "\n",
+    "prints_table = Table(\n",
+    "    'prints', metadata,\n",
+    "    Column('user_id', Integer),\n",
+    "    Column('day_prints', Date),\n",
+    "    Column('position_prints', Integer),\n",
+    "    Column('value_prop_prints', String(255))\n",
+    ")\n",
+    "\n",
+    "# Crea las tablas en la base de datos\n",
+    "metadata.create_all(engine)\n",
+    "\n",
+    "print(\"Tablas creadas exitosamente.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "id": "a4275c50-af6d-4d6c-8762-431ad095c841",
    "metadata": {},
    "outputs": [],
@@ -717,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "id": "c02e646a-7d4a-4c36-83ec-3ba131dd9b77",
    "metadata": {},
    "outputs": [],
@@ -729,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "id": "3ac5352c-76ab-4b00-aec1-82eb46735254",
    "metadata": {},
    "outputs": [
@@ -809,7 +839,7 @@
        "4    24728  2020-11-01                1          link_cobro"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "id": "324c669b-eeb9-4f7a-bc0b-e2446e180e86",
    "metadata": {},
    "outputs": [],
@@ -832,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 82,
    "id": "ae954494-e7eb-4651-9c98-b119afc4c8af",
    "metadata": {},
    "outputs": [
@@ -850,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "58bdf0f0-92ba-4bb8-be8a-2636483fc1b6",
    "metadata": {},
    "outputs": [],
@@ -876,10 +906,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "eb703b69-38f7-49d4-8042-cd74c90f3a48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contenido de la tabla 'prints':\n",
+      "user_id: 98702\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: cellphone_recharge\n",
+      "----------------\n",
+      "user_id: 98702\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 1\n",
+      "value_prop_prints: prepaid\n",
+      "----------------\n",
+      "user_id: 63252\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: prepaid\n",
+      "----------------\n",
+      "user_id: 24728\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: cellphone_recharge\n",
+      "----------------\n",
+      "user_id: 24728\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 1\n",
+      "value_prop_prints: link_cobro\n",
+      "----------------\n",
+      "user_id: 24728\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 2\n",
+      "value_prop_prints: credits_consumer\n",
+      "----------------\n",
+      "user_id: 24728\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 3\n",
+      "value_prop_prints: point\n",
+      "----------------\n",
+      "user_id: 25517\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: point\n",
+      "----------------\n",
+      "user_id: 25517\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 1\n",
+      "value_prop_prints: credits_consumer\n",
+      "----------------\n",
+      "user_id: 25517\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 2\n",
+      "value_prop_prints: transport\n",
+      "----------------\n",
+      "user_id: 57587\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: point\n",
+      "----------------\n",
+      "user_id: 13609\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: transport\n",
+      "----------------\n",
+      "user_id: 3708\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: cellphone_recharge\n",
+      "----------------\n",
+      "user_id: 3708\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 1\n",
+      "value_prop_prints: prepaid\n",
+      "----------------\n",
+      "user_id: 3708\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 2\n",
+      "value_prop_prints: point\n",
+      "----------------\n",
+      "user_id: 3708\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 3\n",
+      "value_prop_prints: send_money\n",
+      "----------------\n",
+      "user_id: 99571\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: send_money\n",
+      "----------------\n",
+      "user_id: 99571\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 1\n",
+      "value_prop_prints: point\n",
+      "----------------\n",
+      "user_id: 99571\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 2\n",
+      "value_prop_prints: link_cobro\n",
+      "----------------\n",
+      "user_id: 53823\n",
+      "day_prints: 2020-11-01\n",
+      "position_prints: 0\n",
+      "value_prop_prints: prepaid\n",
+      "----------------\n"
+     ]
+    }
+   ],
    "source": [
     "async def select_data(table_name):\n",
     "    try:\n",
